166 jdk21 slf4j (#167)
* Tests passing.

* On JDK21, Spring 6.1

* Changed to SLF4J

* Fixed all warnings.

* Fixing warnings.

* Limited the access to the logger code.

---------

Co-authored-by: Lei Yang <lei.yang@fadv.com>