@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>me.ehp246</groupId>
 	<artifactId>auf-rest</artifactId>
-	<version>4.1.3</version>
+	<version>5.0.0</version>
 	<name>Auf REST</name>
 	<description>An annotation-driven declarative REST development
 		framework</description>
@@ -34,31 +34,37 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-		<spring-framework.version>6.0.3</spring-framework.version>
-		<spring-boot.version>3.0.7</spring-boot.version>
+		<jdk.version>21</jdk.version>
 
-		<log4j.version>2.19.0</log4j.version>
+		<spring-framework.version>6.1.3</spring-framework.version>
+		<spring-boot.version>3.2.2</spring-boot.version>
 
-		<jackson.version>2.14.1</jackson.version>
+		<slf4j.version>2.0.11</slf4j.version>
 
-		<junit-jupiter.version>5.8.2</junit-jupiter.version>
-		<junit-platform.version>1.9.2</junit-platform.version>
+		<jackson.version>2.16.1</jackson.version>
 
-		<mockito.version>4.3.1</mockito.version>
+		<log4j.version>2.22.1</log4j.version>
 
-		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<maven-gpg-plugin.version>3.0.1</maven-gpg-plugin.version>
-		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
-		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
-		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
-		<maven-jacoco-plugin.version>0.8.7</maven-jacoco-plugin.version>
+		<junit-jupiter.version>5.10.1</junit-jupiter.version>
+		<junit-platform.version>1.10.1</junit-platform.version>
+
+		<mockito.version>5.9.0</mockito.version>
+		<mockito-inline.version>5.2.0</mockito-inline.version>
+		<bytebuddy.version>1.14.11</bytebuddy.version>
+
+		<maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
+		<maven-gpg-plugin.version>3.1.0</maven-gpg-plugin.version>
+		<maven-javadoc-plugin.version>3.6.3</maven-javadoc-plugin.version>
+		<maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+		<maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+		<maven-jacoco-plugin.version>0.8.11</maven-jacoco-plugin.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>${log4j.version}</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
 		</dependency>
 
 		<dependency>
@@ -101,6 +107,7 @@
 			<groupId>org.junit.platform</groupId>
 			<artifactId>junit-platform-suite-engine</artifactId>
 			<version>${junit-platform.version}</version>
+			<scope>test</scope>
 		</dependency>
 
 		<dependency>
@@ -155,7 +162,7 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-log4j2</artifactId>
 			<version>${spring-boot.version}</version>
-			<scope>test</scope>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -170,12 +177,38 @@
 			<version>${mockito.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>${mockito-inline.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>net.bytebuddy</groupId>
+			<artifactId>byte-buddy</artifactId>
+			<version>${bytebuddy.version}</version>
+			<scope>test</scope>
+		</dependency>
 
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
 			<artifactId>log4j-core</artifactId>
 			<version>${log4j.version}</version>
+			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j.version}</version>
+			<scope>runtime</scope>
+		</dependency>
+		
 		<dependency>
 			<groupId>com.fasterxml.jackson.module</groupId>
 			<artifactId>jackson-module-mrbean</artifactId>
@@ -222,10 +255,11 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>${maven-compiler-plugin.version}</version>
 				<configuration>
-					<release>17</release>
+					<release>${jdk.version}</release>
 					<encoding>UTF-8</encoding>
 					<compilerArgs>
 						<arg>-parameters</arg>
+						<arg>-proc:full</arg>
 					</compilerArgs>
 				</configuration>
 			</plugin>
@@ -236,9 +270,10 @@
 				<configuration>
 					<systemPropertyVariables>
 						<me.ehp246.aufrest.restlogger.enabled>false</me.ehp246.aufrest.restlogger.enabled>
-						<log4j.configurationFile>test/main/resources/log4j2-surefire.xml</log4j.configurationFile>
+						<log4j2.configurationFile>test/main/resources/log4j2-surefire.xml</log4j2.configurationFile>
 						<spring.main.banner-mode>off</spring.main.banner-mode>
 					</systemPropertyVariables>
+					<argLine>-Xshare:off -XX:+EnableDynamicAgentLoading</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
